add findAll endpoint
